word wrapping fix

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -14,6 +14,7 @@
   
   .task-title-wrapper{
     flex: 2;
+    display: inline-block;
     margin-top: auto;
     margin-bottom: auto;
     padding-top: 30px;
@@ -27,11 +28,11 @@
 
   
   .task-span{
-    display: inline-block;
     margin-top: auto;
     margin-bottom: auto;
     margin-left: 10px;
     color: #808080;
+    word-wrap: break-word;
   }
   
   
